<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/account">

        <Preference
            app:key="yt_status"
            app:title="@string/account_status"
            app:summary="@string/account_status_signed_out" />

        <Preference
            android:icon="@drawable/ic_login_filled"
            app:key="yt_sign_in"
            app:title="@string/account_sign_in"
            app:summary="@string/account_sign_in_summary" />

        <Preference
            app:key="yt_sign_out"
            app:title="@string/account_sign_out"
            app:summary="@string/account_sign_out_summary" />

    </PreferenceCategory>

</PreferenceScreen>

