<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/mode_of_operation">

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_region"
            android:defaultValue="true"
            android:title="@string/full_local_mode"
            android:key="full_local_mode"
            android:disableDependentsState="true"
            android:summary="@string/full_local_mode_desc" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_region"
            android:dependency="full_local_mode"
            android:summary="@string/local_stream_extraction_summary"
            android:title="@string/local_stream_extraction"
            app:key="local_stream_extraction" />

    </PreferenceCategory>

    <!-- GF Edition: Piped instance ve auth ayarları gizlendi -->

    <PreferenceCategory app:title="@string/misc">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_dislike"
            android:dependency="local_stream_extraction"
            android:summary="@string/local_ryd_summary"
            android:title="@string/local_ryd"
            app:key="local_return_youtube_dislikes" />

    </PreferenceCategory>

</PreferenceScreen>